Ändrade länkarnas text för marknadernas hemsidor: plockade bort http(s)://

--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@
                                             <p>Håkan Stadig<br>
                                                 Marknadstelefon: 0709-11 32 91<br>
                                                 <a href="mailto:marknad@lovestad.se">marknad@lovestad.se</a><br>
-                                                <a href="http://www.lovestad.se/">http://www.lovestad.se/</a>
+                                                <a href="http://www.lovestad.se/">www.lovestad.se</a>
                                             </p>
                                         </div>
                                     </div>
@@ -1110,7 +1110,7 @@
                                                 285 22 MARKARYD<br>
                                                 0433-161 48<br>
                                                 <a href="mailto:markarydsif@telia.com">markarydsif@telia.com</a><br>
-                                                <a href="http://www.markarydsif.se/">http://www.markarydsif.se/</a>
+                                                <a href="http://www.markarydsif.se/">www.markarydsif.se</a>
                                             </p>
                                         </div>
                                     </div>
@@ -1154,7 +1154,7 @@
                                                 281 42 Hässleholm<br>
                                                 0708-884 229<br>
                                                 <a href="mailto:ronny.hassan@telia.com">ronny.hassan@telia.com</a><br>
-                                                <a href="https://www.hassans.se/">https://www.hassans.se/</a>
+                                                <a href="https://www.hassans.se/">www.hassans.se</a>
                                             </p>
                                         </div>
                                     </div>
@@ -1176,7 +1176,7 @@
                                             <p>Roland Hansson<br>
                                                 0705-41 73 76<br>
                                                 <a href="mailto:folkets.hus@skurupfhp.se">folkets.hus@skurupfhp.se</a><br>
-                                                <a href="http://www.skurupfhp.se/">http://www.skurupfhp.se/</a>
+                                                <a href="http://www.skurupfhp.se/">www.skurupfhp.se</a>
                                             </p>
                                         </div>
                                     </div>
@@ -1203,8 +1203,8 @@
                                                 Sanne Hernodh<br>
                                                 073-7068312<br>
                                                 <a href="mailto:abymarknad@klippansbk.se">abymarknad@klippansbk.se</a><br>
-                                                <a href="http://www.klippan.se/upplevagora/evenemang/abymarknad.8561.html">http://www.klippan.se/upplevagora/evenemang/abymarknad.8561.html</a><br>
-                                                <a href="https://www.facebook.com/groups/abymarknad/">https://www.facebook.com/groups/abymarknad/</a>
+                                                <a href="http://www.klippan.se/upplevagora/evenemang/abymarknad.8561.html">www.klippan.se/upplevagora/evenemang/abymarknad.8561.html</a><br>
+                                                <a href="https://www.facebook.com/groups/abymarknad/">www.facebook.com/groups/abymarknad</a>
                                             </p>
                                         </div>
                                     </div>
@@ -1226,7 +1226,7 @@
                                             <p>Patrik Wirén<br>
                                                 0767-77 45 50<br>
                                                 <a href="mailto:bokning@kullamarknaden.se">bokning@kullamarknaden.se</a><br>
-                                                <a href="http://www.kullamarknaden.se/">http://www.kullamarknaden.se/</a>
+                                                <a href="http://www.kullamarknaden.se/">www.kullamarknaden.se</a>
                                             </p>
                                         </div>
                                     </div>
@@ -1254,7 +1254,7 @@
                                             <p>Ann-Louise Bolin<br>
                                                 0702-10 76 66<br>
                                                 <a href="mailto:ann-louise.bolin@solvesborg.se">ann-louise.bolin@solvesborg.se</a><br>
-                                                <a href="http://www.solvesborg.se/">http://www.solvesborg.se/</a>
+                                                <a href="http://www.solvesborg.se/">www.solvesborg.se</a>
                                             </p>
                                         </div>
                                     </div>
@@ -1307,7 +1307,7 @@
                                             <hr class="invis">
                                             <p>Marknaden 0457-247 70<br>
                                                 <a href="mailto:tosia@ronneby.se">tosia@ronneby.se</a><br>
-                                                <a href="http://www.ronneby.se/">http://www.ronneby.se/</a>
+                                                <a href="http://www.ronneby.se/">www.ronneby.se</a>
                                             </p>
                                         </div>
                                     </div>
@@ -1340,7 +1340,7 @@
                                             <p>Marknadskontoret 0451-37078<br>
                                                 Fax 0451-30755<br>
                                                 <a href="mailto:info@hastvedamarknad.se">info@hastvedamarknad.se</a><br>
-                                                <a href="http://www.hastvedamarknad.se/">http://www.hastvedamarknad.se/</a>
+                                                <a href="http://www.hastvedamarknad.se/">www.hastvedamarknad.se</a>
                                             </p>
                                         </div>
                                     </div>
@@ -1371,7 +1371,7 @@
                                                 Fax 0417-144 00<br>
                                                 <a href="mailto:carina.hansson@tomelilla.se">carina.hansson@tomelilla.se</a><br>
                                                 <a href="mailto:ros-marie.stjernfelt@tomelilla.se">ros-marie.stjernfelt@tomelilla.se</a><br>
-                                                <a href="http://www.tomelilla.se/">http://www.tomelilla.se/</a>
+                                                <a href="http://www.tomelilla.se/">www.tomelilla.se</a>
                                             </p>
                                         </div>
                                     </div>
@@ -1406,7 +1406,7 @@
                                                 0416-272 11<br>
                                                 <a href="mailto:sjobomarknad@sjobo.se">sjobomarknad@sjobo.se</a><br>
                                                 <a href="mailto:renee.jonsson-fiegen@sjobo.se">renee.jonsson-fiegen@sjobo.se</a><br>
-                                                <a href="http://www.sjobo.se/marknader">http://www.sjobo.se/marknader</a>
+                                                <a href="http://www.sjobo.se/marknader">www.sjobo.se/marknader</a>
                                             </p>
                                         </div>
                                     </div>
@@ -1432,7 +1432,7 @@
                                             <hr class="invis">
                                             <p>
                                                 <a href="mailto:hembygdsforen.g@telia.com">hembygdsforen.g@telia.com</a><br>
-                                                <a href="http://www.hembygd.se/gards-harads">http://www.hembygd.se/gards-harads</a>
+                                                <a href="http://www.hembygd.se/gards-harads">www.hembygd.se/gards-harads</a>
                                             </p>
                                         </div>
                                     </div>
@@ -1453,7 +1453,7 @@
                                                 392 32 Kalmar<br>
                                                 0733-25 62 96</p>
                                             <a href="mailto:kiviksmarknad@marknadsevent.se">kiviksmarknad@marknadsevent.se</a><br>
-                                            <a href="http://www.kiviksmarknad.com/">http://www.kiviksmarknad.com/</a>
+                                            <a href="http://www.kiviksmarknad.com/">www.kiviksmarknad.com</a>
                                             </p>
                                         </div>
                                     </div>
@@ -1475,7 +1475,7 @@
                                                 281 42 Hässleholm<br>
                                                 0708-884 229<br>
                                                 <a href="mailto:ronny.hassan@telia.com">ronny.hassan@telia.com</a><br>
-                                                <a href="https://www.hassans.se/">https://www.hassans.se/</a>
+                                                <a href="https://www.hassans.se/">www.hassans.se</a>
                                             </p>
                                         </div>
                                     </div>
@@ -1562,7 +1562,7 @@
                                             <p>Daniel Nilsson<br>
                                                 0733-70 48 88 vid ej svar, skicka SMS<br>
                                                 <a href="mailto:brottare@live.se">brottare@live.se</a><br>
-                                                Program läggs ut på <a href="http://www.hoorsbk.se/">http://www.hoorsbk.se/</a>
+                                                Program läggs ut på <a href="http://www.hoorsbk.se/">www.hoorsbk.se</a>
                                             </p>
                                         </div>
                                     </div>
@@ -1595,7 +1595,7 @@
                                             <hr class="invis">
                                             <p>Marknaden<br>
                                                 0704 464 262<br>
-                                                <a href="http://www.ljungbyhed.nu/">http://www.ljungbyhed.nu/</a>
+                                                <a href="http://www.ljungbyhed.nu/">www.ljungbyhed.nu</a>
                                             </p>
                                         </div>
                                     </div>
@@ -1635,7 +1635,7 @@
                                                 0706-45 56 96 tisd. 18:00 - 19:00<br>
                                                 <a href="mailto:info@palmfestivalen.se">info@palmfestivalen.se</a><br>
                                                 Anmälan: <a href="mailto:knallen@palmfestivalen.se">knallen@palmfestivalen.se</a><br>
-                                                <a href="http://www.palmfestivalen.se/">http://www.palmfestivalen.se/</a>
+                                                <a href="http://www.palmfestivalen.se/">www.palmfestivalen.se</a>
                                             </p>
                                         </div>
                                     </div>
