--- a/index.html
+++ b/index.html
@@ -1573,8 +1573,8 @@
                                             <h2>Ljungbyheds Gammelmarknad</h2>
                                             <img src="images/ljungbyhed_logo.gif" alt="Ljungbyheds Gammelmarknad logga">
                                             <hr class="invis">
-                                            <p>Fredag 12 augusti kl 12.00-20.00<br>
-                                                Lördag 13 augusti kl 9.00-18-00</p>
+                                            <p>Fredag 16 augusti kl 12.00-20.00<br>
+                                                Lördag 17 augusti kl 9.00-18-00</p>
                                         </div>
                                     </div>
                                     <hr class="invis">
@@ -1583,8 +1583,7 @@
                                             <h3>Kontakt</h3>
                                             <p>Ljungbyheds Gammelmarknad<br>
                                                 Karbingatan 8<br>
-                                                260 70 Klippan<br>
-                                                Fax: 0435-44 12 30
+                                                260 70 Klippan
                                             </p>
                                             <hr class="invis">
                                             <p>Bo Rosengren<br>
