Ändringar på tosia och hörby

--- a/index.html
+++ b/index.html
@@ -1275,7 +1275,7 @@
                                                 242 21 Hörby</p>
                                             <hr class="invis">
                                             <p>Emma Sander<br>
-                                                0415-18140<br>
+                                                0415-37 81 41 Marknadstelefon Tis+Tors kl 10-12<br>
                                                 <a href="mailto:horby.marknad@horby.se">horby.marknad@horby.se</a><br>
                                                 <a href="https://www.horby.se/">www.horby.se</a>
                                             </p>
@@ -1298,16 +1298,20 @@
                                         <div class="col-lg-12">
                                             <h3>Kontakt</h3>
                                             <p>Tosia Bonnadan Ronneby<br>
-                                                Ronneby Kommun<br>
-                                                372 80 Ronneby</p>
+                                                Ronneby Turistinformation<br>
+                                                Västra Torggatan 1<br>
+                                                372 30 Ronneby</p>
                                             <hr class="invis">
-                                            <p>Jeanette Rosander<br>
-                                                0457-617 571<br>
-                                                <a href="mailto:jeanette.rosander@ronneby.se">jeanette.rosander@ronneby.se</a></p>
+                                            <p>Marknadsföreståndare<br>
+                                                Aina Ekvall<br>
+                                                0721-72 89 50</p>
                                             <hr class="invis">
-                                            <p>Marknaden 0457-247 70<br>
-                                                <a href="mailto:tosia@ronneby.se">tosia@ronneby.se</a><br>
-                                                <a href="http://www.ronneby.se/">www.ronneby.se</a>
+                                            <p>Turism & evenemangssamordnare<br>
+                                                Jeanette Rosander<br>
+                                                0457-61 75 71</p>
+                                            <hr class="invis">
+                                            <p><a href="mailto:tosia@ronneby.se">tosia@ronneby.se</a><br>
+                                               <a href="http://www.ronneby.se/">www.ronneby.se</a>
                                             </p>
                                         </div>
                                     </div>
