--- a/index.html
+++ b/index.html
@@ -1311,7 +1311,7 @@
                                                 0457-61 75 71</p>
                                             <hr class="invis">
                                             <p><a href="mailto:tosia@ronneby.se">tosia@ronneby.se</a><br>
-                                               <a href="http://www.ronneby.se/">www.ronneby.se</a>
+                                                <a href="http://www.ronneby.se/">www.ronneby.se</a>
                                             </p>
                                         </div>
                                     </div>
@@ -1336,10 +1336,10 @@
                                             <h3>Kontakt</h3>
                                             <p>Hästveda Marknad<br>
                                                 Box 10<br>
-                                                280 23 Hästveda</p>
+                                                282 06 Hästveda</p>
                                             <hr class="invis">
-                                            <p>Agne Nilsson<br>
-                                                0709-930 589</p>
+                                            <p>Kim Olsen<br>
+                                                0732-63 08 80</p>
                                             <hr class="invis">
                                             <p>Marknadskontoret 0451-37078<br>
                                                 Fax 0451-30755<br>
