Tog bort kontaktperson för Lövestad marknad efter förfrågan

--- a/index.html
+++ b/index.html
@@ -1712,8 +1712,7 @@
                                                 Mejerigatan 7<br>
                                                 275 75 Lövestad</p>
                                             <hr class="invis">
-                                            <p>Håkan Stadig<br>
-                                                Marknadstelefon: 0709-11 32 91<br>
+                                            <p>Marknadstelefon: 0709-11 32 91<br>
                                                 <a href="mailto:marknad@lovestad.se">marknad@lovestad.se</a><br>
                                                 <a href="http://www.lovestad.se/">www.lovestad.se</a>
                                             </p>
