--- a/index.html
+++ b/index.html
@@ -1698,6 +1698,8 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Lövestads Marknad</h2>
+                                            <p>Marknaden den 5/4 är inställd.</p>
+                                            <hr class="invis">
                                             <p>En av Skånes äldsta marknader med 10-15000 besökare och 90 knallar per vår och höstmarknad. Det finns både vår- och höstmarknad. Utbudet är varierat. Marknadsplatsen är i centrum.</p>
                                             <hr class="invis">
                                             </p>Vägbeskrivning: Från Lund väg 11 mot Sjöbo, kör ca 4 km på väg 11 mot Simrishamn. I Anklam mot Vanstad och Lövestad.</p>
