--- a/index.html
+++ b/index.html
@@ -1648,7 +1648,7 @@
                     <div class="col-md-12">
                         <div class="tab-services">
                             <div class="tab clearfix">
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-lovestad')"><strong>Lövestad</strong>: 5/4 & 6/9</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-lovestad')"><strong>Lövestad</strong>: 6/9</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-eslov')"><strong>Eslöv</strong>: 30-31/5 & 26-27/9</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-broby')"><strong>Broby</strong>: 6/6 & 5/9</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-vinslov')"><strong>Vinslöv</strong>: 7/6</button>
