--- a/index.html
+++ b/index.html
@@ -1648,10 +1648,10 @@
                     <div class="col-md-12">
                         <div class="tab-services">
                             <div class="tab clearfix">
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-lovestad')"><strong>Lövestad</strong>: 6/9</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-lovestad')"><strong>Lövestad</strong>: <del>5/4</del> & 6/9</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-eslov')"><strong>Eslöv</strong>: 30-31/5 & 26-27/9</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-broby')"><strong>Broby</strong>: 6/6 & 5/9</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-vinslov')"><strong>Vinslöv</strong>: 7/6</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-vinslov')"><strong>Vinslöv</strong>: <del>7/6</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-skurup')"><strong>Skurup</strong>: 12-14/6 & 10-11/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-klippan')"><strong>Åby Klippan</strong>: 16/6</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-jonstorp')"><strong>Jonstorp</strong>: 3-5/7</button>
@@ -1768,6 +1768,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Winslöfs Byamarknad</h2>
+                                            <p>Marknaden är inställd i år.</p>
                                             <p>Winslöfs Byamarknad i centrala Vinslöv.<br>
                                                 Marknaden nystartade 1985 och har ca 70 knallar och 5000 besökare.</p>
                                         </div>
