Ändrade Ronnebys kontaktinformation. Eslövs vårmarknad är inställd.

--- a/index.html
+++ b/index.html
@@ -1649,7 +1649,7 @@
                         <div class="tab-services">
                             <div class="tab clearfix">
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-lovestad')"><strong>Lövestad</strong>: <del>5/4</del> & 6/9</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-eslov')"><strong>Eslöv</strong>: 30-31/5 & 26-27/9</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-eslov')"><strong>Eslöv</strong>: <del>30-31/5</del> & 26-27/9</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-broby')"><strong>Broby</strong>: 6/6 & 5/9</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-vinslov')"><strong>Vinslöv</strong>: <del>7/6</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-skurup')"><strong>Skurup</strong>: 12-14/6 & 10-11/10</button>
@@ -1702,17 +1702,17 @@
                                             <hr class="invis">
                                             <p>En av Skånes äldsta marknader med 10-15000 besökare och 90 knallar per vår och höstmarknad. Det finns både vår- och höstmarknad. Utbudet är varierat. Marknadsplatsen är i centrum.</p>
                                             <hr class="invis">
-                                            </p>Vägbeskrivning: Från Lund väg 11 mot Sjöbo, kör ca 4 km på väg 11 mot Simrishamn. I Anklam mot Vanstad och Lövestad.</p>
-                                        </div>
+                                        </p>Vägbeskrivning: Från Lund väg 11 mot Sjöbo, kör ca 4 km på väg 11 mot Simrishamn. I Anklam mot Vanstad och Lövestad.</p>
                                     </div>
-                                    <hr class="invis">
-                                    <div class="row">
-                                        <div class="col-lg-12">
-                                            <h3>Kontakt</h3>
-                                            <p>Lövestad Marknad<br>
-                                                Lövestad Bygdens Byalag<br>
-                                                Mejerigatan 7<br>
-                                                275 75 Lövestad</p>
+                                </div>
+                                <hr class="invis">
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <h3>Kontakt</h3>
+                                        <p>Lövestad Marknad<br>
+                                            Lövestad Bygdens Byalag<br>
+                                            Mejerigatan 7<br>
+                                            275 75 Lövestad</p>
                                             <hr class="invis">
                                             <p>Marknadstelefon: 0709-11 32 91<br>
                                                 <a href="mailto:marknad@lovestad.se">marknad@lovestad.se</a><br>
@@ -1725,6 +1725,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Eslövs Marknad</h2>
+                                            <p>Marknaden den 30-31/5 är inställd.</p>
                                         </div>
                                     </div>
                                     <hr class="invis">
@@ -1931,7 +1932,7 @@
                                                 372 30 Ronneby</p>
                                             <hr class="invis">
                                             <p>Marknadsföreståndare<br>
-                                                Aina Ekvall<br>
+                                                Ronneby Turistinformation<br>
                                                 0721-72 89 50</p>
                                             <hr class="invis">
                                             <p>Turism & evenemangssamordnare<br>
