--- a/index.html
+++ b/index.html
@@ -1650,12 +1650,12 @@
                             <div class="tab clearfix">
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-lovestad')"><strong>Lövestad</strong>: <del>5/4</del> & 6/9</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-eslov')"><strong>Eslöv</strong>: <del>30-31/5</del> & 26-27/9</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-broby')"><strong>Broby</strong>: 6/6 & 5/9</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-broby')"><strong>Broby</strong>: <del>6/6</del> & 5/9</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-vinslov')"><strong>Vinslöv</strong>: <del>7/6</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-skurup')"><strong>Skurup</strong>: 12-14/6 & 10-11/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-klippan')"><strong>Åby Klippan</strong>: 16/6</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-jonstorp')"><strong>Jonstorp</strong>: 3-5/7</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-solvesborg')"><strong>Sölvesborg</strong>: 1/7 & 3/10</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-solvesborg')"><strong>Sölvesborg</strong>: <del>1/7</del> & 3/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-horby')"><strong>Hörby</strong>: 1-2/7</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-ronneby')"><strong>Ronneby</strong>: 10-12/7</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-hastveda')"><strong>Hästveda</strong>: 8-9/7</button>
@@ -1747,6 +1747,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Broby Marknad</h2>
+                                            <p>Marknaden den 6/6 är inställd.</p>
                                         </div>
                                     </div>
                                     <hr class="invis">
@@ -1864,6 +1865,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Sölvesborgs Marknad</h2>
+                                            <p>Marknaden den 1/7 är inställd.</p>
                                             <p>Marknaden startade kring sekelskiftet år 1900. Marknadsplats är belägen i centrum av Sölvesborg. Det är 200 knallar representerade på sommarmarknaden och ett hundratal på höstmarknaden.</p>
                                             <hr class="invis">
                                             </p>Vägbeskrivning: mot Centrum.</p>
