Limhamns midsommarmarknad är inställd

--- a/index.html
+++ b/index.html
@@ -1670,7 +1670,7 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-ljungbyhed')"><strong>Ljungbyhed</strong>: 21-22/8</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-trelleborg')"><strong>Trelleborg</strong>: 28-29/8</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-landskrona')"><strong>Landskrona</strong>: 19-21/6</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-limhamn')"><strong>Limhamn</strong>: 19-21/6</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-limhamn')"><strong><del>Limhamn</del></strong>: 19-21/6</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-rostanga')"><strong>Röstånga</strong>: 18-19/7</button>
                             </div>
 
@@ -2297,6 +2297,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Limhamns Midsommarmarknad</h2>
+                                            <p>Så är det beslutat att vi ställer in Limhamns Marknad som skulle vara till midsommar 19-21 juni</p>
                                         </div>
                                     </div>
                                     <hr class="invis">
