Ronneby och Åstorp är inställda

--- a/index.html
+++ b/index.html
@@ -1657,14 +1657,14 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-jonstorp')"><strong>Jonstorp</strong>: 3-5/7</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-solvesborg')"><strong>Sölvesborg</strong>: <del>1/7</del> & 3/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-horby')"><strong>Hörby</strong>: 1-2/7</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-ronneby')"><strong>Ronneby</strong>: 10-12/7</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-ronneby')"><strong>Ronneby</strong>: <del>10-12/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-hastveda')"><strong>Hästveda</strong>: 8-9/7</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-tomelilla')"><strong>Tomelilla</strong>: 16/7 & 22/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-sjobo')"><strong>Sjöbo</strong>: 16-17/7 & 3/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-degeberga')"><strong>Degeberga</strong>: 11-12/7</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-kivik')"><strong>Kivik</strong>: 13-14/7</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-ahus')"><strong>Åhus</strong>: 21-22/7</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-astorp')"><strong>Åstorp</strong>: 27-28/6</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-astorp')"><strong>Åstorp</strong>: <del>27-28/6</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-gislov')"><strong>Gislöv</strong>: 31/7-2/8</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-hoor')"><strong>Höör</strong>: 8-9/8</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-ljungbyhed')"><strong>Ljungbyhed</strong>: 21-22/8</button>
@@ -1702,17 +1702,17 @@
                                             <hr class="invis">
                                             <p>En av Skånes äldsta marknader med 10-15000 besökare och 90 knallar per vår och höstmarknad. Det finns både vår- och höstmarknad. Utbudet är varierat. Marknadsplatsen är i centrum.</p>
                                             <hr class="invis">
-                                        </p>Vägbeskrivning: Från Lund väg 11 mot Sjöbo, kör ca 4 km på väg 11 mot Simrishamn. I Anklam mot Vanstad och Lövestad.</p>
+                                            </p>Vägbeskrivning: Från Lund väg 11 mot Sjöbo, kör ca 4 km på väg 11 mot Simrishamn. I Anklam mot Vanstad och Lövestad.</p>
+                                        </div>
                                     </div>
-                                </div>
-                                <hr class="invis">
-                                <div class="row">
-                                    <div class="col-lg-12">
-                                        <h3>Kontakt</h3>
-                                        <p>Lövestad Marknad<br>
-                                            Lövestad Bygdens Byalag<br>
-                                            Mejerigatan 7<br>
-                                            275 75 Lövestad</p>
+                                    <hr class="invis">
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <h3>Kontakt</h3>
+                                            <p>Lövestad Marknad<br>
+                                                Lövestad Bygdens Byalag<br>
+                                                Mejerigatan 7<br>
+                                                275 75 Lövestad</p>
                                             <hr class="invis">
                                             <p>Marknadstelefon: 0709-11 32 91<br>
                                                 <a href="mailto:marknad@lovestad.se">marknad@lovestad.se</a><br>
@@ -1920,6 +1920,8 @@
                                             <p>Varje år fyller 500 knallar stadens gator och torg i Ronneby.<br>
                                                 De lockar 100 000 besökare till marknaden som startade 1850.<br>
                                                 Marknadsplatsen är stadens centrala delar.</p>
+                                            </p>Nu är det även beslutat att Tosia Bonnada'n i Ronneby ställs in i år.<br>
+                                                Nu jobbar vi inför 2021!</p>
                                             <hr class="invis">
                                             </p>Vägbeskrivning: E22 Skyltning Ronneby. Riksväg 30.</p>
                                         </div>
@@ -2119,6 +2121,8 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Torparedagar i Åstorp</h2>
+                                            <p>Torparedagarna i Åstorp har beslutat som många andra att ställa in årets marknad !<br>
+                                                Vi hoppas att vi ses 2021 istället !</p>
                                         </div>
                                     </div>
                                     <hr class="invis">
