Degeberga marknad 11-12 juli är inställd

--- a/index.html
+++ b/index.html
@@ -1661,7 +1661,7 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-hastveda')"><strong>Hästveda</strong>: 8-9/7</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-tomelilla')"><strong>Tomelilla</strong>: 16/7 & 22/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-sjobo')"><strong>Sjöbo</strong>: 16-17/7 & 3/10</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-degeberga')"><strong>Degeberga</strong>: 11-12/7</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-degeberga')"><strong>Degeberga</strong>: <del>11-12/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-kivik')"><strong>Kivik</strong>: 13-14/7</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-ahus')"><strong>Åhus</strong>: 21-22/7</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-astorp')"><strong>Åstorp</strong>: <del>27-28/6</del></button>
@@ -2052,6 +2052,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Degeberga Marknad</h2>
+                                            <p>Degeberga marknad 11-12 juli är inställd, vi siktar på 2021</p>
                                         </div>
                                     </div>
                                     <hr class="invis">
