2 marknader som blev inställda: Landskrona och Röstånga

--- a/index.html
+++ b/index.html
@@ -1669,9 +1669,9 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-hoor')"><strong>Höör</strong>: 8-9/8</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-ljungbyhed')"><strong>Ljungbyhed</strong>: 21-22/8</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-trelleborg')"><strong>Trelleborg</strong>: 28-29/8</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-landskrona')"><strong>Landskrona</strong>: 19-21/6</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-limhamn')"><strong><del>Limhamn</del></strong>: 19-21/6</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-rostanga')"><strong>Röstånga</strong>: 18-19/7</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-landskrona')"><strong>Landskrona</strong>: <del>19-21/6</del></button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-limhamn')"><strong>Limhamn</strong>: <del>19-21/6</del></button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-rostanga')"><strong>Röstånga</strong>: <del>18-19/7</del></button>
                             </div>
 
                             <div id="marknad" class="tab-details clearfix">
@@ -1921,7 +1921,7 @@
                                                 De lockar 100 000 besökare till marknaden som startade 1850.<br>
                                                 Marknadsplatsen är stadens centrala delar.</p>
                                             </p>Nu är det även beslutat att Tosia Bonnada'n i Ronneby ställs in i år.<br>
-                                                Nu jobbar vi inför 2021!</p>
+                                            Nu jobbar vi inför 2021!</p>
                                             <hr class="invis">
                                             </p>Vägbeskrivning: E22 Skyltning Ronneby. Riksväg 30.</p>
                                         </div>
@@ -2283,6 +2283,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Landskrona-Borstahusen Midsommar</h2>
+                                            <p>Marknaden den 19-21 juni är inställd.</p>
                                         </div>
                                     </div>
                                     <hr class="invis">
@@ -2325,6 +2326,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Röstånga Marknad</h2>
+                                            <p>Marknaden den 18-19 juli är inställd.</p>
                                         </div>
                                     </div>
                                     <hr class="invis">
