Hörby marknad är inställd

--- a/index.html
+++ b/index.html
@@ -1656,7 +1656,7 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-klippan')"><strong>Åby Klippan</strong>: 16/6</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-jonstorp')"><strong>Jonstorp</strong>: 3-5/7</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-solvesborg')"><strong>Sölvesborg</strong>: <del>1/7</del> & 3/10</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-horby')"><strong>Hörby</strong>: 1-2/7</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-horby')"><strong>Hörby</strong>: <del>1-2/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-ronneby')"><strong>Ronneby</strong>: <del>10-12/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-hastveda')"><strong>Hästveda</strong>: 8-9/7</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-tomelilla')"><strong>Tomelilla</strong>: <del>16/7</del> & 22/10</button>
@@ -1894,6 +1894,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Hörby Marknad</h2>
+                                            <p>Marknaden den 1-2/7 är inställd.</p>
                                             <p>Marknadsplats: De centrala delarna av staden. Marknaden lockar ca 80 000 besökare och 500 knallar varje år. Första marknadsåret var 1748.</p>
                                         </div>
                                     </div>
