--- a/index.html
+++ b/index.html
@@ -1654,7 +1654,7 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-vinslov')"><strong>Vinslöv</strong>: <del>7/6</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-skurup')"><strong>Skurup</strong>: 12-14/6 & 10-11/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-klippan')"><strong>Åby Klippan</strong>: 16/6</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-jonstorp')"><strong>Jonstorp</strong>: 3-5/7</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-jonstorp')"><strong>Jonstorp</strong>: <del>3-5/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-solvesborg')"><strong>Sölvesborg</strong>: <del>1/7</del> & 3/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-horby')"><strong>Hörby</strong>: <del>1-2/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-ronneby')"><strong>Ronneby</strong>: <del>10-12/7</del></button>
@@ -1843,6 +1843,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Kullamarknaden Jonstorp</h2>
+                                            <p>Marknaden den 3-5 Juli är inställd.</p>
                                         </div>
                                     </div>
                                     <hr class="invis">
