--- a/index.html
+++ b/index.html
@@ -1652,13 +1652,13 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-eslov')"><strong>Eslöv</strong>: <del>30-31/5</del> & 26-27/9</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-broby')"><strong>Broby</strong>: <del>6/6</del> & 5/9</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-vinslov')"><strong>Vinslöv</strong>: <del>7/6</del></button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-skurup')"><strong>Skurup</strong>: 12-14/6 & 10-11/10</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-skurup')"><strong>Skurup</strong>: <del>12-14/6</del> & 10-11/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-klippan')"><strong>Åby Klippan</strong>: 16/6</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-jonstorp')"><strong>Jonstorp</strong>: <del>3-5/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-solvesborg')"><strong>Sölvesborg</strong>: <del>1/7</del> & 3/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-horby')"><strong>Hörby</strong>: <del>1-2/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-ronneby')"><strong>Ronneby</strong>: <del>10-12/7</del></button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-hastveda')"><strong>Hästveda</strong>: 8-9/7</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-hastveda')"><strong>Hästveda</strong>: <del>8-9/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-tomelilla')"><strong>Tomelilla</strong>: <del>16/7</del> & 22/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-sjobo')"><strong>Sjöbo</strong>: <del>16-17/7</del> & 3/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-degeberga')"><strong>Degeberga</strong>: <del>11-12/7</del></button>
@@ -1793,6 +1793,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Skurups Marknad</h2>
+                                            <p>Marknaden den 12-14/6 är inställd.</p>
                                         </div>
                                     </div>
                                     <hr class="invis">
@@ -1955,6 +1956,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Hästveda Marknad</h2>
+                                            <p>Marknaden den 8-9/7 är inställd.</p>
                                             <p>Hästveda marknad har ca 90 000 besökare varje år.<br>
                                                 550 knallar är representerade på marknaden.<br>
                                                 Första marknadsåret var 1870.</p>
